# cookiecutter-zephyr-downstream

./: README.md  README.rst  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name_slug}}/: README.md  west.yml
